@@ -11,10 +11,6 @@
 
 This module defines four dictionaries, :data:`html5`,
 :data:`name2codepoint`, :data:`codepoint2name`, and :data:`entitydefs`.
-:data:`entitydefs` is used to provide the :attr:`entitydefs`
-attribute of the :class:`html.parser.HTMLParser` class.  The definition provided
-here contains all the entities defined by XHTML 1.0 that can be handled using
-simple textual substitution in the Latin-1 character set (ISO-8859-1).
 
 
 .. data:: html5
